
  CHANGES SINCE 0.6
=====================

Issue 83 solved
Comparator for geo-coordinates added
A q-grams comparator added
Bug in CSV data source fixed