@@ -6,3 +6,8 @@ Issue 83 solved
 Comparator for geo-coordinates added
 A q-grams comparator added
 Bug in CSV data source fixed
+Added data debug mode
+Fixed bug with reusing link file as test file
+Added pretty-printing of records
+Better interactive debugging behaviour
+
